footer without icons

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,12 +3,15 @@ $greyMain: #25292b;
 $greyDarker: #1f2123;
 
 $greyFont: #8c8d8d;
+$greyLightFont: #929292;
 
 $blackMain: #121314;
 
 $blackFooter: #1a1c1e;
 
-$redMain: #e3817c;
+$redNavbar: #e3817c;
+
+$redMain: #ee6059;
 
 $navFSize: 14px;
 
