--- a/src/style.scss
+++ b/src/style.scss
@@ -16,3 +16,18 @@ body {
   margin: auto;
 
 }
+
+
+.contenitore {
+  max-width: 1200px;
+  width: 1200px;
+  margin: auto;
+  padding: 6rem 0;
+}
+
+.triangle-down {
+  font-size: 150px;
+  position: absolute;
+  bottom: -110px;
+  right: 46%;
+}
