--- a/src/style.scss
+++ b/src/style.scss
@@ -27,11 +27,12 @@ p {
   width: 1200px;
   margin: auto;
   padding: 6rem 0;
+  position: relative;
 }
 
 .triangle-down {
   font-size: 150px;
   position: absolute;
-  bottom: -110px;
-  right: 46%;
+
+  right: 50%;
 }
